# Torn-Rust-SDK

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  agents.md  deny.toml
.github/workflows/: ci.yml  release.yml
Projects/: apimugbot
SDK/: .env.example  README.md
SDK/docs/: README.md
SDK/scripts/: sync-torn-openapi.ps1
SDK/spec/: capability-overrides.json
SDK/src/: client.rs  error.rs  lib.rs  transport.rs  v1_catalog.rs
SDK/tests/: documentation_contract.rs  live_torn_smoke.rs
docs/: README.md  TYPED_COVERAGE_STATUS.md
docs/architecture/: CORE_CONTRACT.md  TYPED_MODEL_STRATEGY.md
docs/guides/: CLIENT_API.md  ENVIRONMENT.md  ERRORS.md  SDK_EXAMPLES.md
scripts/: check-capabilities-drift.ps1  generate-capabilities.ps1  generate-wrapper-scaffold.ps1  start-project.ps1
spec/: capabilities.json  metadata.json
spec/versions/: torn-openapi-5.7.1.json  torn-openapi-5.8.0.json
src/: capabilities.rs  client.rs  env_config.rs  executor.rs  lib.rs  planner.rs  rate_limit.rs  transport.rs  v1_catalog.rs
src/wrapper/: company.rs  error.rs  faction.rs  forum.rs  internal.rs  key.rs  market.rs  mod.rs  options.rs  property.rs  racing.rs  torn.rs  user.rs
tests/: company_typed_contract.rs  core_contract.rs  documentation_contract.rs  faction_typed_contract.rs  forum_typed_contract.rs  integration_recorded.rs  key_property_typed_contract.rs  live_torn_smoke.rs  market_typed_contract.rs  racing_typed_contract.rs  torn_typed_contract.rs  user_typed_contract.rs
tests/fixtures/: user_networth_v1.json  user_profile_discord_hof_v2.json  (+1 more)
(+31 files in other folders)
